@@ -10,6 +10,7 @@
 * Lib: Fix for a possible crash upon receiving a corrupt block (thx @lopp)
 * Client/TextUI: Added Taproot support to "richest" and "maxouts" commands
 * Wallet: For each listed segwit deposit address, extend the label with the reference to its P2KH address
+* Client/WebUI: SSL server binds to TCP port 14433 in testnet mode
 
 1.9.9 - 2021-05-21
  * Client: Do not drop Authorized peers
